--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "leaflet": "^1.9.4",
         "leaflet-control-geocoder": "^2.4.0",
         "mysql2": "^2.2.5",
-        "sequelize": "^6.3.5"
+        "sequelize": "^6.3.5",
+        "usa-states": "^0.0.6"
     },
     "devDependencies": {
         "eslint": "^7.12.1",
